# specforge-cli

./: .gitignore  README.md  pyproject.toml
docs/: prompt-format.md
src/spec_cli/: __init__.py  __main__.py  api.py  auth.py  cli.py  compile_assembly.py  config.py  constants.py  frontmatter.py  git.py  stage.py  ui.py
src/spec_cli/commands/: add.py  compile.py  git_hooks.py  init.py  log.py  login.py  prompts.py  pull.py  push.py  shell.py  status.py  unstage.py
src/spec_cli/prompts/: __init__.py  render.py  schema.py  text_sanitize.py  tiers.py  tools.py
src/spec_cli/sources/: __init__.py  claude_code.py  codex.py  cursor.py
tests/: test_add_output.py  test_claude_code_adapter.py  test_codex_adapter.py  test_constants.py  test_cursor_adapter.py  test_git_hooks.py  test_git_predict_commit_sha.py  test_is_bundle_md.py  test_prompts_branch_capture.py  test_prompts_review_flow.py  test_prompts_schema.py  test_prompts_tiers.py  test_push_auto_create.py  test_remote_url.py  test_stage.py  test_text_sanitize.py  test_unstage.py
